--- a/Project/website/index.html
+++ b/Project/website/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>Elite Rentals</title>
     <link rel="stylesheet" href="index.css">
@@ -51,3 +52,4 @@
         <p>© 2025 Elite Rentals. All rights reserved.</p>
     </footer>
 </body>
+    </html>
